# poe_ik

./: CMakeLists.txt  hello.txt  package.xml  poe_wksp.code-workspace  testDataLeg11.txt
include/: Common.h  Elapsed.h  Link.h  Pkm.h  Robot.h  SerialChain.h  VerneKinByPoE.h  stdafx.h
include/cl/: Basics.h  CLConfig.h
include/poe_ik/cl/: Array.cpp  Array.h
include/poe_ik/vl/: Mat.h
include/vl/: VLMath.h  Vec.h
lib/: vl.lib
src/: Elapsed.cpp  Link.cpp  Pkm.cpp  Robot.cpp  SerialChain.cpp  interactive_marker_utils.py  keyboard_ikgoal_driver.py  marker_ikgoal_driver.py  poe_ik.cpp  stdafx.cpp
src/SVD/: ap.cpp  bdsvd.cpp  bdsvd.h  bidiagonal.cpp  bidiagonal.h  blas.cpp  lq.cpp  lq.h  qr.cpp  qr.h  reflections.cpp  rotations.cpp  svd.cpp  svd.h
src/cl/: Array.cpp
src/src/: Basics.cpp  LibVLd.cpp  LibVLf.cpp  LibVLfd.cpp
src/vl/: SparseMat.h  SparseVec.h
